# npp-markdown-features

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: windows-build.yml
docs/: architecture-notes.md
scripts/: build.ps1  install-local.ps1  package.ps1
src/core/: DocumentStats.cpp  DocumentStats.h  Feature.h  FeatureRegistry.cpp  FeatureRegistry.h  HtmlExport.cpp  HtmlExport.h  InlineFormatting.cpp  InlineFormatting.h  LinkTools.cpp  LinkTools.h  ListEditing.cpp  ListEditing.h  MarkdownOutline.cpp  MarkdownOutline.h  MarkdownViewFeature.cpp  MarkdownViewFeature.h  ScrollSync.cpp  ScrollSync.h  Settings.cpp  Settings.h  SettingsStore.cpp  SettingsStore.h  Strings.cpp  Strings.h  TableEditing.cpp  TableEditing.h  TocGenerator.cpp  TocGenerator.h
src/plugin/: ExportController.cpp  ExportController.h  FormattingController.cpp  FormattingController.h  LinkController.cpp  LinkController.h  ListEditingController.cpp  ListEditingController.h  NppApi.cpp  NppApi.h  Plugin.cpp  PluginResources.h  PluginResources.rc  TableEditingController.cpp  TableEditingController.h
src/rendering/: MarkdownRenderer.cpp  MarkdownRenderer.h  WebViewHost.cpp  WebViewHost.h  WebViewUserDataFolder.cpp  WebViewUserDataFolder.h
src/ui/: AboutDialog.cpp  AboutDialog.h  OutlinePanel.cpp  OutlinePanel.h  SettingsDialog.cpp  SettingsDialog.h  ToolbarIcon.cpp  ToolbarIcon.h
tests/: main.cpp
